Add new changes

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,9 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
-    - name: Run Tests
-      run: mvn -B package --file pom.xml
+    - name: Run Tests Chrome
+      run: mvn clean test
+    - name: Run Tests Firefox
+      run: mvn clean test -DsuiteXmlFile='src\test\resources\CrossBrowser.xml'
 
    
