--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,9 +27,13 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
+    - uses: abhi1693/setup-browser@v0.3.5
+      with:
+        browser: opera
+        version: latest
     - name: Run Tests Chrome
       run: mvn clean test
     - name: Run Tests Firefox
-      run: mvn clean test -DsuiteXmlFile='src\test\resources\CrossBrowser.xml'
+      run: mvn clean test -DsuiteXmlFile='src/test/resources/CrossBrowser.xml'
 
    
